force-app/main/default/objects/Special_Education__c.object
<CustomObject>
    <description>The Special Education Data object stores data related to IEPs, 504 plans, gifted education, and other student services</description>
    <fields>
        <fullName>AdditionalCoursesforCompass__c</fullName>
        <description>Additional Courses Requested for Compass Students</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Courses for Compass</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AddtlApprovedCompassCourses__c</fullName>
        <description>Additional Approved Compass Courses</description>
        <label>Addtl Approved Compass Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compass Science (only if the student is in Compass LA and Math)</fullName>
                </value>
                <value>
                    <fullName>Compass Social Studies (only if the student is in Compass LA and Math)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompassLAInstructionalLevel__c</fullName>
        <description>Compass Language Arts Instructional Level</description>
        <label>Compass LA Instructional Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>English I</fullName>
                </value>
                <value>
                    <fullName>English II</fullName>
                </value>
                <value>
                    <fullName>English III</fullName>
                </value>
                <value>
                    <fullName>English IV</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompassMathInstructionalLevel__c</fullName>
        <description>Compass Math Instructional  Level</description>
        <label>Compass Math Instructional Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>Algebra I</fullName>
                </value>
                <value>
                    <fullName>Algebra II</fullName>
                </value>
                <value>
                    <fullName>Geometry</fullName>
                </value>
                <value>
                    <fullName>Honors Algebra</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>Pre-Calculus</fullName>
                </value>
                <value>
                    <fullName>Trigonometry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompassSSInstructionalLevel__c</fullName>
        <description>Compass Social Studies Instructional Level</description>
        <label>Compass SS Instructional Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (Not Available)</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>K (Not Available)</fullName>
                </value>
                <value>
                    <fullName>Macroeconomics</fullName>
                </value>
                <value>
                    <fullName>Microeconomics</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>US History I</fullName>
                </value>
                <value>
                    <fullName>US History II</fullName>
                </value>
                <value>
                    <fullName>World Geography</fullName>
                </value>
                <value>
                    <fullName>World History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompassScienceInstructionLevel__c</fullName>
        <description>Compass Science Instructional Level</description>
        <label>Compass Science Instruction Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Earth/Space Science</fullName>
                </value>
                <value>
                    <fullName>K (Not Available)</fullName>
                </value>
                <value>
                    <fullName>MS Earth and Space Science</fullName>
                </value>
                <value>
                    <fullName>MS Life Science</fullName>
                </value>
                <value>
                    <fullName>MS Nature of Science</fullName>
                </value>
                <value>
                    <fullName>MS Physical Science</fullName>
                </value>
                <value>
                    <fullName>Physical Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectedProgramRequests__c</fullName>
        <description>Additional Approved Connected Courses</description>
        <label>Connected Program Requests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateLastReEval__c</fullName>
        <description>Date of student&apos;s last evaluation meeting (this is the evaluation review meeting date, not the testing date -- EXCEPT IN FL)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Re Eval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMcKinneyVentoReviewed__c</fullName>
        <description>Date review by McKinney Vento Liaison</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date McKinney Vento Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReviewedbySpecEdDirector__c</fullName>
        <description>Date reviewed by Special Education Director</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Reviewed by Spec Ed Director</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofInitialGiftedCall__c</fullName>
        <description>Date of Initial Gifted Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Initial Gifted Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DyslexiaServices__c</fullName>
        <description>Is the student receiving services for dyslexia?</description>
        <label>Dyslexia Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluatedWithInLastYear__c</fullName>
        <description>Has the student been evaluated for special education services within the last year?</description>
        <label>EvaluatedWithInLastYear</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Decline to Disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLVS_GiftedEP_Past3Years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student had an education plan for gifted services in the last three years?</description>
        <label>FLVS GiftedEP Past3Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormallyExitedIEP__c</fullName>
        <description>Was the student formally exited from his/her IEP in the past three years?</description>
        <label>Formally Exited IEP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gifted__c</fullName>
        <description>Identifies gifted students</description>
        <label>Gifted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documenting</fullName>
                </value>
                <value>
                    <fullName>Gifted Allow</fullName>
                </value>
                <value>
                    <fullName>Gifted Allow Continue</fullName>
                </value>
                <value>
                    <fullName>Gifted Connections Academy Identification</fullName>
                </value>
                <value>
                    <fullName>Gifted EP - FL</fullName>
                </value>
                <value>
                    <fullName>Gifted IEP</fullName>
                </value>
                <value>
                    <fullName>Gifted Local School Identification</fullName>
                </value>
                <value>
                    <fullName>Gifted No Gifted Courses</fullName>
                </value>
                <value>
                    <fullName>Gifted Potential</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasStudentEverHad504Plan__c</fullName>
        <description>Has the student ever had a 504 plan?</description>
        <label>Has Student Ever Had 504 Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Decline to Disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IACA_SpedStudClassification__c</fullName>
        <description>Student Classification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IACA Sped Stud Classification</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEPHistory__c</fullName>
        <description>Has the student ever had an Individualized Education Program (IEP)?</description>
        <label>IEPHistory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Decline to Disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEPLastReviewed__c</fullName>
        <description>IEP Last Reviewed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IEP Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IEPLastUpdated__c</fullName>
        <description>When was the last time the student&apos;s IEP was updated?</description>
        <label>IEP Last Updated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Within the last year</fullName>
                </value>
                <value>
                    <fullName>Within the last two years</fullName>
                </value>
                <value>
                    <fullName>Within the last three years</fullName>
                </value>
                <value>
                    <fullName>More than three years ago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEPMeetingStatus__c</fullName>
        <description>IEP Meeting Status</description>
        <label>IEP Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-enrollment meeting held-Return to district</fullName>
                </value>
                <value>
                    <fullName>Pre-enrollment meeting scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEPPastThreeYears__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student had an Individualized Education Program (IEP) in the last three years?</description>
        <label>IEP Past Three Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEPStateTestingParticipation__c</fullName>
        <description>How will the student participate in state testing?</description>
        <label>IEP State Testing Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State test not given at student&apos;s current grade level</fullName>
                </value>
                <value>
                    <fullName>Student will take alternative assessment</fullName>
                </value>
                <value>
                    <fullName>Student will take modified assessment</fullName>
                </value>
                <value>
                    <fullName>Student will take state test with accommodations</fullName>
                </value>
                <value>
                    <fullName>Student will take state test without accommodations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEP_504_Docs_ElectonicOrMail__c</fullName>
        <description>IEP_504_Docs_ElectronicOrMail</description>
        <label>IEP 504 Docs Electonic or Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I have read and understand the above, I agree to receiving notices by electronic mail and to use the digital signature process provided by the school.</fullName>
                </value>
                <value>
                    <fullName>I prefer to receive all documentation discussed above, by U.S. mail. I have read and understand the above, however, I elect to opt out of 1) receiving notices by electronic mail and 2) using the digital signature process provided by the school.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEP_DisabilityTextBox__c</fullName>
        <description>Description of the student&apos;s disabilities</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IEP Disability Text Box</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IEP_Disability__c</fullName>
        <description>Identification of the student&apos;s disabilities.</description>
        <label>IEP Disability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Asperger&apos;s syndrome</fullName>
                </value>
                <value>
                    <fullName>Attention deficit disorder (ADD or ADHD)</fullName>
                </value>
                <value>
                    <fullName>Autism spectrum disorder</fullName>
                </value>
                <value>
                    <fullName>Emotional issues</fullName>
                </value>
                <value>
                    <fullName>Gifted</fullName>
                </value>
                <value>
                    <fullName>Hard of hearing/deaf</fullName>
                </value>
                <value>
                    <fullName>Intellectual disability (cognitive impairment)</fullName>
                </value>
                <value>
                    <fullName>Other health issues</fullName>
                </value>
                <value>
                    <fullName>Physical disability</fullName>
                </value>
                <value>
                    <fullName>Specific learning disability</fullName>
                </value>
                <value>
                    <fullName>Speech/language issues</fullName>
                </value>
                <value>
                    <fullName>Visually impaired/blind</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEP__c</fullName>
        <description>Students with disabilities with IEPs</description>
        <label>IEP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documenting</fullName>
                </value>
                <value>
                    <fullName>IEP</fullName>
                </value>
                <value>
                    <fullName>IEP-Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstructionalModificationNotes__c</fullName>
        <description>Instructional Modification Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Instructional Modification Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LS_Articulation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Articulation</description>
        <label>LS Articulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LS_DaysOfWeekContactPreferred__c</fullName>
        <description>Days of the week LiveSpeech contact is preferred.</description>
        <label>LS Days Of Week Contact Preferred</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LS_Fluency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fluency</description>
        <label>LS Fluency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LS_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Language</description>
        <label>LS Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LS_Other_Speech_Services_Type__c</fullName>
        <description>Other Speech Services Type Needed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Other Speech Services Type</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LS_Pragmatics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pragmatics</description>
        <label>LS Pragmatics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LS_Pre_Enroll_Directors_Notes__c</fullName>
        <description>Director&apos;s Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Pre Enroll Directors Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LS_Pre_Enrollment_Date_Stamp__c</fullName>
        <description>Pre Enrollment Date Stamp (auto populates)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Pre Enrollment Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LS_Pre_Enrollment__c</fullName>
        <description>Requested Service</description>
        <label>LS Pre Enrollment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attend IEP Meetings</fullName>
                </value>
                <value>
                    <fullName>Review Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LS_PreferredPhoneNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Preferred Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LS_Preferred_Email_Address__c</fullName>
        <description>Preferred email address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Preferred Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LS_Preferred_Method_Of_Contact__c</fullName>
        <description>Preferred method of contact</description>
        <label>LS Preferred Method Of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Via Phone</fullName>
                </value>
                <value>
                    <fullName>Via Text</fullName>
                </value>
                <value>
                    <fullName>Via WebMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LS_Preferred_Mobile_Phone_Number__c</fullName>
        <description>Preferred mobile phone number (for text messages)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LS Preferred Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LS_Time_of_Day_Contact_Preferred__c</fullName>
        <description>Preferred time of day for LiveSpeech contact</description>
        <label>LS Time of Day Contact Preferred</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastAnnualReview__c</fullName>
        <description>Date of Last annual review (NC/OH-IEP Meeting Date)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Annual Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeastRestrictiveEnvironment__c</fullName>
        <description>Least Restrictive Environment</description>
        <label>Least Restrictive Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>21% to 60% in special education</fullName>
                </value>
                <value>
                    <fullName>80% or more of the day in the regular class</fullName>
                </value>
                <value>
                    <fullName>More than 61% in special education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>McKinney_Ventio_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>McKinney Vento Eligible</description>
        <label>McKinney Ventio Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McKinney_Vento_Review_Status__c</fullName>
        <description>Status of McKinney Vento Review</description>
        <label>McKinney Vento Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placement Complete</fullName>
                </value>
                <value>
                    <fullName>Ready for Placement</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MckV_Waived__c</fullName>
        <description>Which required documents were not collected upon enrollment</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MckV Waived</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OEA_Spec_Ed_Approvedor_Denied__c</fullName>
        <description>Special Education services for the student</description>
        <label>OEA Spec Ed Approvedor Denied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participated_Alt_Assessment__c</fullName>
        <label>Participated Alt Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan504AllergyAccomodations__c</fullName>
        <description>Does the student’s 504 plan include accommodations for allergies?</description>
        <label>504 Plan Allergy Accomodations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan504Exit__c</fullName>
        <description>Was the student formally exited from his/her 504 plan in the past three years?</description>
        <label>Plan504Exit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan504History__c</fullName>
        <description>Has the student had a 504 plan in the last three years?</description>
        <label>Plan504History</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan504LastReviewed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>504 Plan Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan504__c</fullName>
        <description>Students with 504 plans</description>
        <label>Plan504</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>504</fullName>
                </value>
                <value>
                    <fullName>504 Missing</fullName>
                </value>
                <value>
                    <fullName>504-No Documentation Available</fullName>
                </value>
                <value>
                    <fullName>Illegible</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Received-No Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previously_Identified_GT__c</fullName>
        <description>Has the student been previously identified as gifted and talented?</description>
        <label>Previously Identified GT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Special Educations</relationshipLabel>
        <relationshipName>Special_Educations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
</CustomObject>